fix: moves the go to top icon off screen in mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -488,7 +488,7 @@ span.underline {
   background: url(../img/Globe.svg);
   background-size: cover;
   position: fixed;
-  bottom: -7vw;
+  bottom: -5rem;
   right: 5vw;
   cursor: pointer;
   transition: 0.5s bottom ease;
